--- a/src/main/resources/view/TelaInformacaoUsuario.fxml
+++ b/src/main/resources/view/TelaInformacaoUsuario.fxml
@@ -3,8 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
@@ -72,11 +73,11 @@
                                     <Insets right="20.0" />
                                  </padding>
                                  <children>
-                                    <Label styleClass="logout" stylesheets="@../css/alunoStyle.css" text="Voltar">
+                                    <Button mnemonicParsing="false" text="Sair">
                                        <font>
-                                          <Font name="System Bold" size="16.0" />
+                                          <Font size="15.0" />
                                        </font>
-                                    </Label>
+                                    </Button>
                                  </children>
                               </HBox>
                            </children>
@@ -97,15 +98,6 @@
                                           <Insets left="10.0" />
                                        </padding>
                                     </HBox>
-                                    <TableView prefHeight="200.0" prefWidth="200.0">
-                                      <columns>
-                                        <TableColumn prefWidth="163.1999992132187" text="CPF" />
-                                        <TableColumn minWidth="0.0" prefWidth="1090.9332122802734" text="Nome" />
-                                      </columns>
-                                       <VBox.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </VBox.margin>
-                                    </TableView>
                                     <HBox prefHeight="30.0" prefWidth="1280.0" spacing="5.0">
                                        <children>
                                           <VBox prefHeight="45.0" prefWidth="769.0" styleClass="bordaCampos" stylesheets="@../css/infoUsuarioAllStyle.css">
@@ -190,19 +182,82 @@
                                                 <Insets left="10.0" />
                                              </padding>
                                           </VBox>
+                                          <VBox layoutX="20.0" layoutY="10.0" prefHeight="45.0" prefWidth="394.0" styleClass="bordaCampos" stylesheets="@../css/infoUsuarioAllStyle.css">
+                                             <children>
+                                                <Label text="Creditos">
+                                                   <font>
+                                                      <Font name="System Bold" size="15.0" />
+                                                   </font>
+                                                </Label>
+                                                <Label layoutX="10.0" layoutY="10.0" text="creditos">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
+                                          </VBox>
                                        </children>
                                        <padding>
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                     </HBox>
-                                    <HBox layoutX="10.0" layoutY="316.0" prefHeight="30.0" prefWidth="1280.0" spacing="5.0">
-                                       <padding>
-                                          <Insets left="10.0" right="10.0" />
-                                       </padding>
+                                    <HBox layoutX="10.0" layoutY="161.0" prefHeight="50.0" prefWidth="1280.0" spacing="5.0">
                                        <children>
-                                          <Button mnemonicParsing="false" text="Alterar" />
+                                          <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="307.0" text="Informação de Turmas">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Button>
                                        </children>
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
                                     </HBox>
+                                    <VBox alignment="TOP_CENTER" prefHeight="192.0" prefWidth="1280.0" spacing="10.0">
+                                       <children>
+                                          <HBox alignment="TOP_CENTER" prefHeight="32.0" prefWidth="1280.0" spacing="10.0">
+                                             <children>
+                                                <RadioButton mnemonicParsing="false" selected="true" text="Administrador">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                   <toggleGroup>
+                                                      <ToggleGroup fx:id="selectAcess" />
+                                                   </toggleGroup>
+                                                </RadioButton>
+                                                <RadioButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Professor" toggleGroup="$selectAcess">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                </RadioButton>
+                                                <RadioButton layoutX="131.0" layoutY="10.0" mnemonicParsing="false" text="Aluno" toggleGroup="$selectAcess">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                </RadioButton>
+                                             </children>
+                                             <VBox.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </VBox.margin>
+                                          </HBox>
+                                          <TextField alignment="CENTER" prefHeight="26.0" prefWidth="200.0" promptText="Use CPF para encontrar o usuário. Necessário ter escolhido um tipo acima.">
+                                             <VBox.margin>
+                                                <Insets left="300.0" right="300.0" />
+                                             </VBox.margin>
+                                          </TextField>
+                                          <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="183.0" text="Buscar">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                       <padding>
+                                          <Insets top="10.0" />
+                                       </padding>
+                                    </VBox>
                                  </children>
                               </VBox>
                            </children>
