--- a/src/main/resources/view/TelaAluno.fxml
+++ b/src/main/resources/view/TelaAluno.fxml
@@ -83,8 +83,7 @@
                         </HBox>
                         <GridPane hgap="10.0" prefHeight="540.0" prefWidth="1280.0">
                           <columnConstraints>
-                            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -92,11 +91,6 @@
                           </rowConstraints>
                            <children>
                               <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" stylesheets="@../css/alunoStyle.css" text="Informações Acadêmicas">
-                                 <font>
-                                    <Font name="System Bold" size="24.0" />
-                                 </font>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" stylesheets="@../css/alunoStyle.css" text="Alteração de Dados" GridPane.columnIndex="1">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
