--- a/src/main/resources/css/cadDisciplinaStyle.css
+++ b/src/main/resources/css/cadDisciplinaStyle.css
@@ -14,19 +14,28 @@
 
 
 
-.logout:hover {
-    -fx-text-fill: red;
+.logout {
+    -fx-text-fill: black;
+    -fx-background-color: none;
+    -fx-border-width: 1;
 }
 
-.button {
+.logout:hover {
+    -fx-text-fill: red;
+    -fx-background-color: none;
+    -fx-border-width: 1;
+}
+
+
+.buttonCad {
     -fx-background-color: #204060;
     -fx-text-fill: white;
     -fx-border-width: 0;
 }
 
-.button:hover{
+.buttonCad:hover{
     -fx-border-color: #4d79ff;
-    -fx-border-width: 5;
+    -fx-border-width: 2.5;
 }
 
 .subtitle-cadastrar{
