--- a/src/main/resources/view/TelaAdmin.fxml
+++ b/src/main/resources/view/TelaAdmin.fxml
@@ -107,7 +107,7 @@
                                     <Font name="System Bold" size="24.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Cadastrar Disciplina" GridPane.columnIndex="1">
+                              <Button mnemonicParsing="false" onAction="#goCadastroDisciplina" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Cadastrar Disciplina" GridPane.columnIndex="1">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
