--- a/src/main/resources/view/TelaCadastroDisciplina.fxml
+++ b/src/main/resources/view/TelaCadastroDisciplina.fxml
@@ -8,12 +8,13 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaLoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaCadastroDisciplinaController">
    <children>
       <VBox layoutX="336.0" layoutY="230.0" prefHeight="720.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -46,7 +47,7 @@
                            <children>
                               <HBox prefHeight="100.0" prefWidth="1080.0" spacing="5.0">
                                  <children>
-                                    <Label text="nomeAdmin">
+                                    <Label fx:id="nomeAdmin" text="nomeAdmin">
                                        <font>
                                           <Font size="21.0" />
                                        </font>
@@ -56,7 +57,7 @@
                                           <Font size="21.0" />
                                        </font>
                                     </Label>
-                                    <Label text="matricula">
+                                    <Label fx:id="matricula" text="matricula">
                                        <font>
                                           <Font size="21.0" />
                                        </font>
@@ -74,11 +75,11 @@
                                     <Insets right="20.0" />
                                  </padding>
                                  <children>
-                                    <Label styleClass="logout" stylesheets="@../css/alunoStyle.css" text="Voltar">
+                                    <Button mnemonicParsing="false" onAction="#voltar" styleClass="logout" stylesheets="@../css/cadDisciplinaStyle.css" text="Sair">
                                        <font>
-                                          <Font name="System Bold" size="16.0" />
+                                          <Font name="System Bold" size="15.0" />
                                        </font>
-                                    </Label>
+                                    </Button>
                                  </children>
                               </HBox>
                            </children>
@@ -97,13 +98,13 @@
                         </HBox>
                         <VBox prefHeight="510.0" prefWidth="1280.0" spacing="5.0">
                            <children>
-                              <TableView prefHeight="200.0" prefWidth="200.0">
+                              <TableView fx:id="table_disciplina" prefHeight="200.0" prefWidth="200.0">
                                 <columns>
-                                  <TableColumn prefWidth="141.6000236272812" text="Codigo" />
-                                  <TableColumn prefWidth="760.7999114990234" text="Nome" />
-                                    <TableColumn minWidth="0.0" prefWidth="177.5999755859375" text="Carga Horaria" />
-                                    <TableColumn minWidth="0.0" text="Créditos" />
-                                    <TableColumn prefWidth="96.533203125" text="Período" />
+                                  <TableColumn fx:id="col_codigo" prefWidth="141.6000236272812" text="Codigo" />
+                                  <TableColumn fx:id="col_nome" prefWidth="760.7999114990234" text="Nome" />
+                                    <TableColumn fx:id="col_cargaH" minWidth="0.0" prefWidth="177.5999755859375" text="Carga Horaria" />
+                                    <TableColumn fx:id="col_creditos" minWidth="0.0" text="Créditos" />
+                                    <TableColumn fx:id="col_periodo" prefWidth="96.533203125" text="Período" />
                                 </columns>
                               </TableView>
                               <HBox prefHeight="26.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
@@ -147,7 +148,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                          <TextField fx:id="nomeDisciplina" minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
@@ -155,7 +156,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField prefHeight="26.0" prefWidth="284.0" />
+                                          <TextField fx:id="codigoDisciplina" prefHeight="26.0" prefWidth="284.0" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" layoutX="656.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
@@ -163,7 +164,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <ComboBox prefWidth="283.0" />
+                                          <ComboBox fx:id="cb_periodo" prefWidth="283.0" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -196,17 +197,20 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <RadioButton mnemonicParsing="false" text="30 Horas (2 Créditos)">
+                                          <RadioButton fx:id="radio_30" mnemonicParsing="false" text="30 Horas (2 Créditos)">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                             <toggleGroup>
+                                                <ToggleGroup fx:id="cargaHoraria" />
+                                             </toggleGroup>
+                                          </RadioButton>
+                                          <RadioButton fx:id="radio_60" layoutX="21.0" layoutY="20.0" mnemonicParsing="false" selected="true" text="60 Horas (4 Creditos)" toggleGroup="$cargaHoraria">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </RadioButton>
-                                          <RadioButton layoutX="21.0" layoutY="20.0" mnemonicParsing="false" text="60 Horas (4 Creditos)">
-                                             <font>
-                                                <Font size="15.0" />
-                                             </font>
-                                          </RadioButton>
-                                          <RadioButton layoutX="208.0" layoutY="20.0" mnemonicParsing="false" text="120 Horas (6 Creditos)">
+                                          <RadioButton fx:id="radio_120" layoutX="208.0" layoutY="20.0" mnemonicParsing="false" text="120 Horas (6 Creditos)" toggleGroup="$cargaHoraria">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
@@ -217,7 +221,7 @@
                               </HBox>
                               <HBox alignment="TOP_CENTER" prefHeight="63.0" prefWidth="1259.0">
                                  <children>
-                                    <Button mnemonicParsing="false" prefHeight="66.0" prefWidth="358.0" stylesheets="@../css/cadUserStyle.css" text="Cadastrar">
+                                    <Button mnemonicParsing="false" onAction="#cadastrarDisciplina" prefHeight="66.0" prefWidth="358.0" styleClass="buttonCad" stylesheets="@../css/cadDisciplinaStyle.css" text="Cadastrar">
                                        <font>
                                           <Font name="System Bold" size="28.0" />
                                        </font>
