--- a/src/main/resources/view/TelaAdmin.fxml
+++ b/src/main/resources/view/TelaAdmin.fxml
@@ -97,7 +97,7 @@
                                     <Font name="System Bold" size="24.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Cadastrar Turma" GridPane.columnIndex="2">
+                              <Button mnemonicParsing="false" onAction="#goCadastroTurma" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Cadastrar Turma" GridPane.columnIndex="2">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
