--- a/src/main/resources/view/TelaCadastroTurma.fxml
+++ b/src/main/resources/view/TelaCadastroTurma.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaLoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaCadastroTurmaController">
    <children>
       <VBox layoutX="336.0" layoutY="230.0" prefHeight="720.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -47,7 +47,7 @@
                            <children>
                               <HBox prefHeight="100.0" prefWidth="1080.0" spacing="5.0">
                                  <children>
-                                    <Label text="nomeAdmin">
+                                    <Label fx:id="nomeAdmin" text="nomeAdmin">
                                        <font>
                                           <Font size="21.0" />
                                        </font>
@@ -57,7 +57,7 @@
                                           <Font size="21.0" />
                                        </font>
                                     </Label>
-                                    <Label text="matricula">
+                                    <Label fx:id="matricula" text="matricula">
                                        <font>
                                           <Font size="21.0" />
                                        </font>
@@ -107,13 +107,13 @@
                                     </Label>
                                  </children>
                               </HBox>
-                              <TableView prefHeight="200.0" prefWidth="200.0">
+                              <TableView fx:id="table_disciplina" prefHeight="200.0" prefWidth="200.0">
                                 <columns>
-                                  <TableColumn prefWidth="141.6000236272812" text="Codigo" />
-                                  <TableColumn prefWidth="760.7999114990234" text="Nome" />
-                                    <TableColumn minWidth="0.0" prefWidth="177.5999755859375" text="Carga Horaria" />
-                                    <TableColumn minWidth="0.0" text="Créditos" />
-                                    <TableColumn prefWidth="96.533203125" text="Período" />
+                                  <TableColumn fx:id="col_codigo" prefWidth="141.6000236272812" text="Codigo" />
+                                  <TableColumn fx:id="col_nome" prefWidth="760.7999114990234" text="Nome" />
+                                    <TableColumn fx:id="col_cargaHoraria" minWidth="0.0" prefWidth="177.5999755859375" text="Carga Horaria" />
+                                    <TableColumn fx:id="col_creditos" minWidth="0.0" text="Créditos" />
+                                    <TableColumn fx:id="col_periodo" prefWidth="96.533203125" text="Período" />
                                 </columns>
                               </TableView>
                               <HBox prefHeight="26.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
@@ -139,11 +139,6 @@
                                                 <Insets right="170.0" />
                                              </HBox.margin>
                                           </Label>
-                                          <Label layoutX="20.0" layoutY="15.0" text="Professor">
-                                             <font>
-                                                <Font name="System Bold" size="15.0" />
-                                             </font>
-                                          </Label>
                                        </children>
                                        <padding>
                                           <Insets left="10.0" />
@@ -157,23 +152,19 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                          <TextField fx:id="codigoTurma" minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                    <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="430.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
                                        <padding>
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField prefHeight="26.0" prefWidth="284.0" />
-                                       </children>
-                                    </HBox>
-                                    <HBox alignment="CENTER_LEFT" layoutX="656.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
-                                       <padding>
-                                          <Insets left="10.0" right="10.0" />
-                                       </padding>
-                                       <children>
-                                          <ComboBox prefWidth="283.0" />
+                                          <Label fx:id="codigoDisciplina" text="codigoDisciplina">
+                                             <font>
+                                                <Font size="20.0" />
+                                             </font>
+                                          </Label>
                                        </children>
                                     </HBox>
                                  </children>
@@ -208,12 +199,12 @@
                               </HBox>
                               <HBox layoutX="20.0" layoutY="52.0" prefHeight="42.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
                                  <children>
-                                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="620.0" spacing="20.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                    <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="626.0" spacing="20.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
                                        <padding>
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <RadioButton mnemonicParsing="false" text="Manhã">
+                                          <RadioButton mnemonicParsing="false" onAction="#setHorario" selected="true" text="Manhã">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
@@ -221,31 +212,31 @@
                                                 <ToggleGroup fx:id="toggleTurno" />
                                              </toggleGroup>
                                           </RadioButton>
-                                          <RadioButton layoutX="21.0" layoutY="20.0" mnemonicParsing="false" text="Tarde" toggleGroup="$toggleTurno">
+                                          <RadioButton layoutX="21.0" layoutY="20.0" mnemonicParsing="false" onAction="#setHorario" text="Tarde" toggleGroup="$toggleTurno">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </RadioButton>
-                                          <RadioButton layoutX="208.0" layoutY="20.0" mnemonicParsing="false" text="Noite" toggleGroup="$toggleTurno">
+                                          <RadioButton layoutX="208.0" layoutY="20.0" mnemonicParsing="false" onAction="#setHorario" text="Noite" toggleGroup="$toggleTurno">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </RadioButton>
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                    <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="427.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
                                        <padding>
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <ComboBox prefWidth="283.0" />
+                                          <ComboBox fx:id="cb_horario" prefHeight="26.0" prefWidth="412.0" />
                                        </children>
                                     </HBox>
                                  </children>
                               </HBox>
                               <HBox alignment="TOP_CENTER" prefHeight="63.0" prefWidth="1259.0">
                                  <children>
-                                    <Button mnemonicParsing="false" prefHeight="66.0" prefWidth="358.0" stylesheets="@../css/cadUserStyle.css" text="Cadastrar">
+                                    <Button mnemonicParsing="false" onAction="#cadastrarTurma" prefHeight="66.0" prefWidth="358.0" stylesheets="@../css/cadUserStyle.css" text="Cadastrar">
                                        <font>
                                           <Font name="System Bold" size="28.0" />
                                        </font>
@@ -269,7 +260,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="34.0" prefWidth="1280.0" styleClass="footerInfo" stylesheets="@../css/loguinStyle.css">
                <children>
-                  <Label text="desenvolvedoresID" textFill="#7e7e7e" />
+                  <Label fx:id="desenvolvedores" text="desenvolvedoresID" textFill="#7e7e7e" />
                </children></HBox>
          </children>
       </VBox>
